--- a/app/src/main/res/layout/activity_coordinateur_missions.xml
+++ b/app/src/main/res/layout/activity_coordinateur_missions.xml
@@ -6,49 +6,87 @@
     android:layout_height="match_parent"
     android:background="@color/gris_clair">
 
-    <!-- Barre de recherche -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/searchLayout"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="Rechercher une mission"
-        app:boxStrokeColor="@color/bleu_marine"
-        app:hintTextColor="@color/bleu_marine">
+        android:background="@color/bleu_marine">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/searchMission"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/bleu_marine"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="?attr/actionBarSize">
 
-    <!-- RecyclerView pour les missions -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewMissions"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp">
+
+                <TextView
+                    android:id="@+id/toolbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Missions"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_centerVertical="true"/>
+
+                <Spinner
+                    android:id="@+id/spinnerStatusFilter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="@color/white"
+                    android:spinnerMode="dropdown" />
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="88dp"
-        android:layout_marginBottom="72dp"
-        android:clipToPadding="false"
-        android:padding="8dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"/>
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <!-- Floating Action Button -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/searchLayout"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:hint="Rechercher par titre..."
+            app:boxStrokeColor="@color/bleu_marine"
+            app:hintTextColor="@color/bleu_marine">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/searchMission"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/bleu_marine"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMissions"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clipToPadding="false"
+            android:padding="8dp"/>
+    </LinearLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddMission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_anchor="@id/recyclerViewMissions"
-        app:layout_anchorGravity="bottom|end"
+        app:layout_anchor="@id/bottomNavigation"
+        app:layout_anchorGravity="top|end"
         app:srcCompat="@drawable/ic_add"
         app:backgroundTint="@color/bleu_marine"
-        android:contentDescription="Ajouter mission"/>
+        app:tint="@color/white"/>
 
-    <!-- Bottom Navigation bleu marine -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
