--- a/app/src/main/res/layout/fragment_materiel.xml
+++ b/app/src/main/res/layout/fragment_materiel.xml
@@ -1,6 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recyclerMateriel"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:padding="12dp">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMateriel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
